# router/index.js
@@ -3,12 +3,12 @@ const app = express()
 const request = require('../controller/handle');
 const logger = require('../util/logger.js');
 
-//DEPOSIT
-app.post('/deposit', async (req, res) => {
+//login
+app.post('/login', async (req, res) => {
     try {
         logger.debug(req.body)
-        var result = await new request().deposit(req.body)
-        res.status(201)
+        var result = await new request().login(req.body)
+        res.status(200)
         res.json(result)
     } catch (error) {
         let messageError = {
@@ -19,45 +19,12 @@ app.post('/deposit', async (req, res) => {
         res.json(messageError)
     }
 })
-//WITHDRAW
-app.post('/withdraw', async (req, res) => {
+//getTotal
+app.get('/getTotal', async (req, res) => {
     try {
-        logger.debug(req.body);
-        var result = await new request().withdraw(req.body);
-        res.status(200);
-        res.json(result);
-    } catch (error) {
-        let messageError = {
-            statusCode: error.statusCode ||  400,
-            message: error.message || error
-        }
-        res.status(messageError.statusCode)
-        res.json(messageError)
-    }
-})
-//TRANSFER
-app.post('/transfer', async (req, res) => {
-    try {
-        logger.debug(req.body);
-        var result = await new request().transfer(req.body);
-        res.status(200);
-        res.json(result);
-    } catch (error) {
-        let messageError = {
-            statusCode: error.statusCode ||  400,
-            message: error.message || error
-        }
-        res.status(messageError.statusCode)
-        res.json(messageError)
-    }
-})
-//CHECK BALANCE
-app.post('/checkBalance', async (req, res) => {
-    try {
-        logger.debug(req.body);
-        var result = await new request().checkBalance(req.body);
-        res.status(200);
-        res.json(result);
+        var result = await new request().getTotal()
+        res.status(200)
+        res.json(result)
     } catch (error) {
         let messageError = {
             statusCode: error.statusCode ||  400,
